fix mainNavbar can't collapse

--- a/htmlPhp/webCSS/userPageStyle.css
+++ b/htmlPhp/webCSS/userPageStyle.css
@@ -7,6 +7,18 @@ html,body{
     min-height: 100vh;
 }
 
+.container{
+    background-color: white;
+}
+
+#listHeader{
+    text-align: center;
+}
+
+#userNavLink{                          /*userNav 內容置中*/
+    text-align: center;
+}
+                                                    /*table*/
 th{
     text-align: center;
 }
@@ -14,25 +26,25 @@ th{
 td{
     text-align: center;
 }
-
-.container{
-    background-color: white;
-}
-
-.nav-link{                          /*userNav 內容置中*/
-    text-align: center;
-}
-
-#listHeader{
-    text-align: center;
-}
-
+                                                    /*tail,footer*/
 #systemContactInfo{
     background-color: black;
     color:white;                  /*文字顏色*/
     text-align: center;
 }
-
+                                                    /*bookingPage*/
 #createBtn{
     text-align: center;
+}
+                                                    /*loginPage*/
+#loginForm{
+    padding: 30px;
+}
+
+#loginbtn{
+    text-align: center;             /*按鈕置中*/
+}
+
+#loginMessage{
+    text-align: center;             /*按鈕置中*/
 }
